force-app/main/default/objects/Temporal_Titulos__c/Temporal_Titulos__c.object-meta.xml
<CustomObject>
    <label>Temporal Titulo</label>
    <nameField>
        <label>Temporal Titulo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Titulos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>