force-app/main/default/objects/Temporal_Titulos__c/fields/CHECK_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>CHECK_ALUMNO__c</fullName>
    <label>CHECK_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>