force-app/main/default/objects/Temporal_Titulos__c/fields/P_DDDKEY__c.field-meta.xml
<CustomField>
    <fullName>P_DDDKEY__c</fullName>
    <label>P_DDDKEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>