force-app/main/default/objects/Temporal_Titulos__c/fields/TI_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>TI_ALUMNO__c</fullName>
    <label>TI_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>