force-app/main/default/objects/Temporal_Titulos__c/fields/TI_EXPIRA__c.field-meta.xml
<CustomField>
    <fullName>TI_EXPIRA__c</fullName>
    <label>TI_EXPIRA</label>
    <type>Date</type>
</CustomField>