force-app/main/default/objects/Temporal_Titulos__c/fields/TI_FECTIT__c.field-meta.xml
<CustomField>
    <fullName>TI_FECTIT__c</fullName>
    <label>TI_FECTIT</label>
    <type>Date</type>
</CustomField>