force-app/main/default/objects/Temporal_Titulos__c/fields/TI_TITULO__c.field-meta.xml
<CustomField>
    <fullName>TI_TITULO__c</fullName>
    <label>TI_TITULO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>