force-app/main/default/objects/Temporal_Titulos__c/fields/TI_VAGO__c.field-meta.xml
<CustomField>
    <fullName>TI_VAGO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TI_VAGO</label>
    <type>Checkbox</type>
</CustomField>