force-app/main/default/objects/Temporal_Titulos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>TI_ALUMNO__c</columns>
    <columns>TI_TITULO__c</columns>
    <columns>TI_FECTIT__c</columns>
    <columns>TI_EXPIRA__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </filters>
    <label>All Records</label>
</ListView>